log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-logs
          emptyDir: {}
        - name: config-volume
          configMap:
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: log-writer
          image: log_output_writer:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: shared-logs
              mountPath: /app/logs
        - name: log-reader
          image: log_output_reader:latest
          imagePullPolicy: Never
          volumeMounts:
            - name: shared-logs
              mountPath: /app/logs
            - name: config-volume
              mountPath: /app/config
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
#          ports:                   for future reference
#            - containerPort: 3000  for future reference
#              name: http           for future reference
#              protocol: TCP        for future reference
